tests/no_compile/repr_c_mandatory.stderr
error: proc-macro derive panicked
 --> tests/no_compile/repr_c_mandatory.rs:1:10
  |
1 | #[derive(derive_mmio::Mmio)]
  |          ^^^^^^^^^^^^^^^^^
  |
  = help: message: `#[derive(Mmio)]` only works on repr(C) types
